Fix sidenav on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -98,13 +98,14 @@ hr {
 }
 .sidenav {
     height: 100%;
-    width: 210px;
+    width: 200px;
     position: fixed;
     z-index: 1;
     top: 64px;
     left: 0;
     overflow-x: hidden;
     padding-top: 20px;
+    background-color: #e9e9e9;
 }
 .sidenav a {
     padding: 6px 8px 6px 16px;
@@ -117,4 +118,9 @@ hr {
 .main {
     margin-left: 0px;
     padding: 0px 0px;
+}
+@media only screen and (max-width: 993px) {
+    .sidenav {
+        display: none;
+    }
 }
