--- a/_sass/materialize/components/_grid.scss
+++ b/_sass/materialize/components/_grid.scss
@@ -1,7 +1,7 @@
 .container {
   margin: 0 auto;
-  max-width: 1280px;
-  width: 90%;
+  max-width: 1500px;
+  width: 95%;
 }
 @media #{$medium-and-up} {
   .container {
@@ -10,7 +10,9 @@
 }
 @media #{$large-and-up} {
   .container {
-    width: 70%;
+    width: 90%;
+    padding-left: 170px;
+
   }
 }
 .container .row {
